--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ certifi==2020.12.5
 chardet==4.0.0
 Django==3.1.6
 django-crispy-forms==1.11.0
+emoji-country-flag==1.2.3
 idna==2.10
 PyMySQL==1.0.2
 pytz==2021.1
